--- a/windows-app/windows-app/windows-app/MainWindow.xaml
+++ b/windows-app/windows-app/windows-app/MainWindow.xaml
@@ -5,9 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:windows_app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" Height="450" Width="800" Topmost="True">
     <Grid>
-        <Button Content="Button" HorizontalAlignment="Left" Margin="203,122,0,0" VerticalAlignment="Top" Width="316" Height="152"/>
-
+        <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="301,177,0,0" VerticalAlignment="Top"/>
     </Grid>
 </Window>
