--- a/windows-app/windows-app/windows-app/MainWindow.xaml
+++ b/windows-app/windows-app/windows-app/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:windows_app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800" Topmost="True">
+        Title="MainWindow" Height="450" Width="800" Topmost="True" Background="#02FFFFFF" AllowsTransparency="True" WindowStyle="None">
     <Grid>
         <Label x:Name="label" Content="Label" HorizontalAlignment="Left" Margin="301,177,0,0" VerticalAlignment="Top"/>
     </Grid>
