Applied button class to table cells.

--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -16,7 +16,7 @@
     <tr>
       <th scope="row">{{row.godzina}}</th>
       {% for col in {{row.cols}} %}
-      <td>col</td>
+      <td class="btn">col</td>
       {% endfor %}
     </tr>
     {% endfor %}
