--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -1,5 +1,6 @@
 {% extends "base/basic_layout.html" %}
 {% block content %}
+<div class="row">
 <table class="table">
   <thead class="thead-dark">
   <tr>
@@ -15,12 +16,18 @@
     <tr>
       <th scope="row">{{row.hour.hour}}:00</th>
       {% for col in row.cells %}
-      <td colspan="{{ col.1 }}"><a class="btn act-btn text-center btn-warning btn-block">{{ col.0 }}</a></td>
+      <td colspan="{{ col.1 }}"><a class="btn act-btn btn-warning btn-block">{{ col.0 }}</a></td>
       {% endfor %}
     </tr>
     {% endfor %}
   </tbody>
 </table>
-    
+</div>
+{% for snapshot in snapshots %}
+<div class="row">
+  <div class="col-lg-8"><img src="{{snapshot.image}}" class="img-fluid" alt="Responsive img"></div>
+  <div class="col-lg-4 text-center">{{snapshost.description}}</div>
+</div>
+{% endfor %}
 
 {% endblock %}
