--- a/windows-app/windows-app/windows-app/MainWindow.xaml
+++ b/windows-app/windows-app/windows-app/MainWindow.xaml
@@ -5,13 +5,13 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:windows_app"
         mc:Ignorable="d"
-        Title="MainWindow" Height="93.2" Width="280.8" Topmost="True" Background="#02FFFFFF" AllowsTransparency="True" WindowStyle="None" Loaded="Window_Loaded" ShowInTaskbar="False">
+        Title="MainWindow" Height="93.2" Width="280.8" Topmost="True" Background="#02FFFFFF" AllowsTransparency="True" WindowStyle="None" Loaded="Window_Loaded" ShowInTaskbar="False" Visibility="Visible">
     <Grid Margin="0,0,-0.2,-0.8">
         <Label x:Name="mainLabel" Content="" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" RenderTransformOrigin="-0.422,0.359" Height="41" Width="261" Foreground="White" FontSize="18"/>
         <Label x:Name="secondaryLabel" Content="" HorizontalAlignment="Left" Margin="10,51,0,0" VerticalAlignment="Top" Width="139" Height="27" Foreground="White" FontSize="11"/>
         <Image Source="icons/break.png" Margin="241,48,10,15.6" MouseEnter="Image_MouseEnter" Opacity="0.7" MouseLeave="Image_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown" MouseLeftButtonUp="Image_MouseLeftButtonUp"/>
         <Image HorizontalAlignment="Left" Height="23" Margin="213,50,0,0" VerticalAlignment="Top" Width="22" Source="icons/web.png" RenderTransformOrigin="0.5,0.5" Opacity="0.7" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_1" MouseLeftButtonUp="Image_MouseLeftButtonUp"/>
-        <Image HorizontalAlignment="Left" Height="23" Margin="184,51,0,0" VerticalAlignment="Top" Width="22" Source="icons/smiley.png" RenderTransformOrigin="0.5,0.5" Opacity="0.7" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_2" MouseLeftButtonUp="Image_MouseLeftButtonUp"/>
+        <Image HorizontalAlignment="Left" Height="23" Margin="184,51,0,0" VerticalAlignment="Top" Width="22" Source="comment.png" RenderTransformOrigin="0.5,0.5" Opacity="0.7" MouseEnter="Image_MouseEnter" MouseLeave="Image_MouseLeave" MouseLeftButtonDown="Image_MouseLeftButtonDown_2" MouseLeftButtonUp="Image_MouseLeftButtonUp"/>
     </Grid>
     <Window.Resources>
         <Style TargetType="Image">
