--- a/web-app/happytime/base/templates/base/basic_layout.html
+++ b/web-app/happytime/base/templates/base/basic_layout.html
@@ -17,6 +17,8 @@
   <body>
 
    <div class="container">
+       <img class="mt-3 mb-3 col-5" src="{% static "base/logo.png" %}"/>
+
         {% block content %}
         {% endblock %}
     </div>
