Add random colors

--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -16,7 +16,7 @@
     <tr>
       <th scope="row">{{row.hour.hour}}:00</th>
       {% for col in row.cells %}
-      <td colspan="{{ col.1 }}"><a class="btn act-btn btn-warning btn-block">{{ col.0 }}</a></td>
+      <td colspan="{{ col.1 }}"><a class="btn act-btn btn-block" style="color: white; background-color: {{col.2}}">{{ col.0 }}</a></td>
       {% endfor %}
     </tr>
     {% endfor %}
