Fixing snapshots vol 1.

--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -25,8 +25,8 @@
 </div>
 {% for snapshot in snapshots %}
 <div class="row">
-  <div class="col-lg-8"><img src="{{snapshot.image}}" class="img-fluid" alt="Responsive img"></div>
-  <div class="col-lg-4 text-center">{{snapshost.description}}</div>
+  <div class="col-lg-6"><img src="{{snapshot.image}}" class="img-fluid" alt="Responsive img"></div>
+  <div class="col-lg-6 text-center my-auto">{{snapshost.description}}</div>
 </div>
 {% endfor %}
 
