--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -24,7 +24,7 @@
 </table>
 </div>
 {% for snapshot in snapshots %}
-<div class="row">
+<div class="row border border-3">
   <div class="col-lg-6"><img src="{{snapshot.image}}" class="img-fluid" alt="Responsive img"></div>
   <div class="col-lg-6 text-center my-auto">{{snapshost.description}}</div>
 </div>
