--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -1,5 +1,20 @@
 {% extends "base/basic_layout.html" %}
 {% block content %}
+
+<div>
+    <form method="POST">
+        <h2 class="text-center"></h2>
+        {% csrf_token %}
+        {{ form|crispy }}
+        <div>
+            <button class="btn btn-success" type="submit">Sign in</button>
+        </div>
+    </form>
+    <small>
+        Need an account? No problem. Just <a href="{% url 'register' %}">sign up</a>!
+    </small>
+</div>
+
 <div class="row">
 <table class="table with-margin-bot">
   <thead class="thead-dark">
