Added one empty row for spacing.

--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -36,6 +36,9 @@
   </tbody>
 </table>
 </div>
+<div class="row">
+<div class="col-lg-12"><a class="btn btn-primary btn-block">&nbsp;</a></div>
+</div>
 {% for snapshot in snapshots %}
 <div class="row border border-3 with-margin-bot">
   <div class="col-lg-6"><img src="{{snapshot.image}}" class="img-fluid" alt="Responsive img"></div>
