--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -34,7 +34,7 @@
 </table>
 </div>
 <div class="row">
-<div class="col-lg-12"><a class="btn btn-primary btn-block">&nbsp;</a></div>
+<div class="col-lg-12"><a class="btn btn-block">&nbsp;</a></div>
 </div>
 {% for snapshot in snapshots %}
 <div class="row border border-3 with-margin-bot">
