--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -2,7 +2,7 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-<div class="col-3 mb-3">
+<div class="text-center mb-3">
     <form method="POST">
         {% csrf_token %}
         {{ form|crispy }}
