Co dwa wiersze to nie jeden.

--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -39,12 +39,12 @@
 {% for snapshot in snapshots %}
 <div class="row border border-3 with-margin-bot pt-2">
   <div class="col-lg-6"><img src="{{ snapshot.image.url }}" class="img-fluid" alt="Responsive img"></div>
-  <div class="col-lg-6 text-center my-auto">
-    <div class="row with-margin-bot">
-      <div class="col-lg-6 text-right">{{ snapshot.timestamp }}</div>
+  <div class="col-lg-6 ">
+    <div class="row with-margin-bot align-top">
+      <div class="col text-right">{{ snapshot.timestamp }}</div>
     </div>
     <div class="row with-margin-bot">
-      <div class="col-lg-6 text-center">{{ snapshot.note }}</div>
+      <div class="col text-center">{{ snapshot.note }}</div>
     </div>
   </div>
 </div>
