--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -36,18 +36,23 @@
 <div class="row">
 <div class="col-lg-12"><a class="btn btn-block">&nbsp;</a></div>
 </div>
+
+<h2 class="text-center mt-2 mb-4">🎉Your happy moments!🎉</h2>
+
 {% for snapshot in snapshots %}
 <div class="row border border-3 with-margin-bot pt-2">
   <div class="col-lg-6"><img src="{{ snapshot.image.url }}" class="img-fluid" alt="Responsive img"></div>
   <div class="col-lg-6 ">
     <div class="row with-margin-bot align-top">
-      <div class="col text-right">{{ snapshot.timestamp }}</div>
+      <div class="col text-right">🕒 {{ snapshot.timestamp }}</div>
     </div>
-    <div class="row with-margin-bot">
-      <div class="col text-center">{{ snapshot.note }}</div>
+    <div class="row with-margin-bot" style="height: 100%; margin-top: -5%">
+      <div class="col text-center my-auto">{{ snapshot.note }}</div>
     </div>
   </div>
 </div>
 {% endfor %}
+<br>
+<br>
 
 {% endblock %}
