Added focus in table cells

--- a/web-app/happytime/activities/static/activities/table.css
+++ b/web-app/happytime/activities/static/activities/table.css
@@ -49,3 +49,12 @@ button {
 label {
     display: inline;
 }
+
+.btn {
+    -webkit-transition: 0.1s ease-in-out;
+}
+
+.btn:hover {
+    opacity: 0.9;
+    -webkit-transform: scale(1.03, 1.03);
+}
