--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -41,7 +41,7 @@
 
 {% for snapshot in snapshots %}
 <div class="row border border-3 with-margin-bot pt-2">
-  <div class="col-lg-6"><img src="{{ snapshot.image.url }}" class="img-fluid" alt="Responsive img"></div>
+  <div class="col-lg-6"><img src="{{ snapshot.image.url }}" class="img-fluid mb-2" alt="Responsive img"></div>
   <div class="col-lg-6 ">
     <div class="row with-margin-bot align-top">
       <div class="col text-right">🕒 {{ snapshot.timestamp }}</div>
