--- a/web-app/happytime/activities/templates/activities/table.html
+++ b/web-app/happytime/activities/templates/activities/table.html
@@ -47,7 +47,7 @@
       <div class="col text-right">🕒 {{ snapshot.timestamp }}</div>
     </div>
     <div class="row with-margin-bot" style="height: 100%; margin-top: -5%">
-      <div class="col text-center my-auto">{{ snapshot.note }}</div>
+      <div class="col text-center my-auto" style="font-size: 18pt">{{ snapshot.note }}</div>
     </div>
   </div>
 </div>
